--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
-theme: jekyll-theme-slate
+theme: jekyll-theme-cayman
+title: Welcome to my homepage!! 
+description: This is a test tutorial page for my learning purposes only
